added commandline parameter create table if not existing when records to insert compatible with Java 1.8